force-app/main/default/objects/leaseworks__Lessor__c/leaseworks__Lessor__c.object-meta.xml
<CustomObject>
    <customHelpPage>leaseworks__DeskComHelpPage</customHelpPage>
    <description>Details of the Lessor</description>
    <label>Setup</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>