force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Accounting_enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for enabling Accounting</description>
    <label>Z_Unused_2309 Accounting enabled?</label>
    <type>Checkbox</type>
</CustomField>