force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Auto_Create_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Auto_Create_Campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source: AirCastle:
Asana: Setup campaigns in advance</description>
    <inlineHelpText>Should Campaigns be created in advance automatically?</inlineHelpText>
    <label>Z_Unused_2112 Auto-Create Campaigns</label>
    <type>Checkbox</type>
</CustomField>