force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Contact_Name__c</fullName>
    <label>Z_Unused_2112 Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>