force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Billing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Email_Address__c</fullName>
    <label>Z_Unused_2112 Email Address</label>
    <type>Email</type>
</CustomField>