force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Bulk_Invoice_From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bulk_Invoice_From_Email_Address__c</fullName>
    <inlineHelpText>The invoices will be sent out from the mentioned email address.</inlineHelpText>
    <label>Bulk Invoice From Email Address</label>
    <type>Email</type>
</CustomField>