force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__CM_Rev_Reduction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CM_Rev_Reduction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2309CreditMemoRevenue Reduction</label>
    <referenceTo>leaseworks__Chart_Of_Accounts__c</referenceTo>
    <relationshipLabel>Setup (Credit Memo Revenue Reduction)</relationshipLabel>
    <relationshipName>cmRevAcc</relationshipName>
    <type>Lookup</type>
</CustomField>