force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Country__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Country__c</fullName>
    <label>Z_Unused_2112 Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>