force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Data_Load_Mode__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Data_Load_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Trigger level validations are not enforced if Data Load Mode flag is set.</inlineHelpText>
    <label>Z_Unused_2103 Data Load Mode</label>
    <type>Checkbox</type>
</CustomField>