force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Disable_MR_Snapshots__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Disable_MR_Snapshots__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MR Snapshots are created every time an event that affects the Invoiced/Collected MR happens (e.g. Creation of Invoice, Payment). Check this to prevent creation of MR Snapshots.</description>
    <inlineHelpText>MR Snapshots are created every time an event that affects the Invoiced/Collected MR happens (e.g. Creation of Invoice, Payment). Check this to prevent creation of MR Snapshots.</inlineHelpText>
    <label>Z_Unused_2103 Disable MR Snapshots</label>
    <type>Checkbox</type>
</CustomField>