force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__IRR_Low_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IRR_Low_Rate__c</fullName>
    <defaultValue>-0.2</defaultValue>
    <label>Z_Unused_2112 IRR Low Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>