force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Lease_Logo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Logo__c</fullName>
    <defaultValue>&quot;https://c.na11.content.force.com/servlet/servlet.ImageServer?id=015G0000001SwrR&amp;oid=00DG0000000ggTD&amp;lastMod=1352235828000&quot;</defaultValue>
    <label>Company Logo URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>