force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Ledger_Currency_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ledger_Currency_new__c</fullName>
    <description>Currency used for reporting purposes across the organization. Currently only USD is supported.</description>
    <formula>TEXT(leaseworks__Ledger_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Currency used for reporting purposes across the organization. Currently only USD is supported.</inlineHelpText>
    <label>Ledger Currency</label>
    <type>Text</type>
</CustomField>