force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Number_Of_Months_For_Wide_Body__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Number_Of_Months_For_Wide_Body__c</fullName>
    <defaultValue>18</defaultValue>
    <label>Z_Unused_2112 NumberOfMonthsForWideBody</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>