force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Phone_Number__c</fullName>
    <label>Z_Unused_2112 Phone Number</label>
    <type>Phone</type>
</CustomField>