force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Replicate_Attachments_As_Files__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Replicate_Attachments_As_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workaround for the issue that attachments cannot be downloaded/emailed in SF1</description>
    <label>Z_Unused_2103Replicate Attach.As Files?</label>
    <type>Checkbox</type>
</CustomField>