force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Spec_Sheet__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Spec_Sheet__c</fullName>
    <label>Z_Unused_2103 Spec Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spec Sheet A</fullName>
                <default>true</default>
                <label>Spec Sheet A</label>
            </value>
            <value>
                <fullName>Spec Sheet B</fullName>
            </value>
            <value>
                <fullName>Spec Sheet C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>