force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__TSN_CSN_Verification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN_CSN_Verification_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TSN/CSN Verification Enabled?</label>
    <type>Checkbox</type>
</CustomField>