force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Unapplied_cm__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Unapplied_cm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2309 Unapplied Credit Memo</label>
    <referenceTo>leaseworks__Chart_Of_Accounts__c</referenceTo>
    <relationshipLabel>Setup (Unapplied Credit Memo)</relationshipLabel>
    <relationshipName>Setup1</relationshipName>
    <type>Lookup</type>
</CustomField>