force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Update_Rent_Term_To_Proposed_Terms__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Update_Rent_Term_To_Proposed_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox if you would like the Rent and Term on each of the Commercial Terms to be updated whenever Rent and/or Term are updated on the Prospect.</description>
    <inlineHelpText>Check this checkbox if you would like the Rent and Term on each of the Commercial Terms to be updated whenever Rent and/or Term are updated on the Prospect.</inlineHelpText>
    <label>Z_Unused_2103 Update Rent &amp; Term To CT?</label>
    <type>Checkbox</type>
</CustomField>