force-app/main/default/objects/leaseworks__Lessor__c/fields/leaseworks__Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Zip_Code__c</fullName>
    <label>Z_Unused_2112 Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>