force-app/main/default/objects/leaseworks__Lessor__c/validationRules/leaseworks__LedgerCurrencyCantBeManuallyUpdated.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LedgerCurrencyCantBeManuallyUpdated</fullName>
    <active>true</active>
    <description>Ledger currency cannot be updated manually on setup.</description>
    <errorConditionFormula>false/*AND(
    NOT(ISNEW()),
    !$Setup.LeaseWorksSettings__c.Disable_All_Triggers__c,
    ISCHANGED(Ledger_Currency__c)
)*/</errorConditionFormula>
    <errorMessage>Editing Ledger Currency is not allowed. The system currently supports only USD as the Ledger Currency.</errorMessage>
</ValidationRule>